# Nindamani-the-weed-removal-robot

./: LICENSE  README.md
nindamani_agri_robot/: CMakeLists.txt  README.md  package.xml
nindamani_agri_robot/launch/: nindamani_agri_robot.launch.py
nindamani_agri_robot/scripts/: nindamani_agri_robot.py
rpicam_ai_interface/: CMakeLists.txt  README.md  package.xml
rpicam_ai_interface/scripts/: camera.py  perspectiveImage.py  rpicam_ai_interface.py
servo_control/: CMakeLists.txt  README.md  package.xml
servo_control/config/: servo_settings.yaml
servo_control/scripts/: servo_driver.py  servo_ros2_interface.py
servo_control/srv/: GetAbsolutePosition.srv  GetFeedbackGain.srv  GetIntegralGain.srv  GetMaxMotorSpeed.srv  GetPositionEncoder.srv  GetProportionateGain.srv  OpenGripper.srv  ReadDamping.srv  ReadMotorSpeed.srv  SetAbsolutePosition.srv  SetFeedbackGain.srv  SetIntegralGain.srv  SetMaxMotorSpeed.srv  SetMotorSpeed.srv  SetPositionEncoder.srv  SetProportionateGain.srv  SetRelativePosition.srv  WriteDamping.srv
stepper_control/: CMakeLists.txt  LICENSE  README.md  package.xml
stepper_control/config/: stepper_settings.yaml
stepper_control/scripts/: stepper_driver.py  stepper_ros2_interface.py
stepper_control/src/: deltaKinematics.c
stepper_control/srv/: GetMotorAcceleration.srv  GetMotorMicrostepping.srv  SetMotorAcceleration.srv
utilities/: cropImage.py  dataAugment.py  rename.py
utils/: rename.py
