<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nindamani_agri_robot</name>
  <version>0.0.0</version>
  <description>The Nindamani Robot Control</description>
  <maintainer email="autoroboculture@gmail.com">autoroboculture</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>servo_control</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>servo_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
